# benchwell

./: .gitignore  Gopkg.toml  IDENTITY.md  Insomnia_2020-08-13.json  LEARNING.md  Makefile  README.md  TODO.md  app.go  config.dist.json  config.vala.in  connections.dist.json  connections.dist.toml  go.mod  go.sum  layout.go  main.glade  main.go  meson.build  parse-sass.sh  start-testing.sh  style.sh  test.sql
Adwaita/: _colors.scss  _common.scss  _common_overrides.scss  gtk-contained-dark.css  gtk-contained.css  meson.build
assets/: assets.go  brand.go  brand_dark.go  brand_light.go  config.go  default_config.go  iconset.go  iconset_orange.go  iconset_white.go  static_table.go  static_table_custom.go  theme_dark.go  theme_light.go
assets/data/: benchwell.desktop  brand-base.css  brand-dark.css  brand-light.css  config.db  config.dist.json  config.sql  freedesktop-mime.xml  logo.pixil  sqlaid.desktop  table-custom.pixil  table.pixil
assets/data/style/: benchwell_dark.xml  benchwell_light.xml
build-aux/: post_install.py
clipboard/: linux.go  windows.go
cmd/: assets.go  iconset.go  import.go  root.go  test.go
cmd/sqlhero/: connect.go  main.go
cmd/sqlhero/demo/: main.go
cmd/test/: main.go
cmd/treeview/: main.go
config/: config.go  connection.go  http.go  keychain.go  keychain_builtin.go  keychain_dbus.go  keychain_linux.go  keychain_windows.go  register_style.go  settings.go
connect/: connectionlist.go  form.go  screen.go
ctrl/: app_ctrl.go  connect_ctrl.go  connection_ctrl.go  connection_tab_ctrl.go  ctrl.go  db_tab_ctrl.go  http_tab_ctrl.go  main_ctrl.go  tab_ctrl.go  table_ctrl.go  window_ctrl.go  window_tab_ctrl.go
data/: assets.gresource.xml  config.sql  gschema.xml  io.benchwell.appdata.xml.in.in  io.benchwell.desktop.in.in  meson.build  stylesheet.css
data/plugins/: random.js
eventbus/: eventbus.go
gtk/: app.go  common.go  conditions.go  connect_screen.go  connection_screen.go  db.go  factory.go  http_screen.go  http_sidebar.go  list.go  main_screen.go  mysql_socket_form.go  mysql_ssh_form.go  mysql_tcp_form.go  preferences.go  result.go  result_grid.go  result_table.go  result_view.go  socket_form.go  source_view.go  sqlite_form.go  ssh_form.go  tab.go  tcp_form.go  tool_tab.go  undo_text_view.go  util.go  window.go
gtk/controls/: common.go  list.go  result.go
logger/: logger.go
meson/: post_install.py
po/: POTFILES  en.po  es.po  meson.build
server/: databaselist.go  recordtable.go  screen.go  sidepanel.go  tabber.go  tablelist.go
site/: gracias.php  index.html  index.php  manifest.json
site/css/: main.css
site/includes/: footer.php  header.php  menu.php
site/js/: main.js
sqlengine/: context.go  driver.vala  engine.go  engine_test.go  mysql.vala
sqlengine/driver/: driver.go  machine.go
sqlengine/mysql/: mysql.go  ssh.go
sqlengine/sqlenginetest/: generated.go  mock.go
sqlengine/sqlite/: sqlite.go
sqlengine/test/: driver.go
src/: Application.vala  ApplicationWindow.vala  Config.vala  Constants.vala  Main.vala  application.vala  application_window.vala  config.vala  constants.vala  database.vala  database_condition.vala  database_connect.vala  database_data.vala  database_mysql_form.vala  database_result_view.vala  database_service.vala  database_sqlite_form.vala  database_table.vala  database_tables.vala  environment.vala  http.vala  http_addressbar.vala  http_importer.vala  http_sidebar.vala  main.vala  pomodoro.vala  settings_panel.vala  sql_driver.vala  sql_engine.vala  sql_mysql.vala  sql_parser.vala  test.vala  utils.vala  utils_test.vala  widget_button.vala  widget_button_opt.vala  widget_cancel.vala  widget_combo_tab.vala  widget_keyvalues.vala  widget_label.vala  (+4 more)
src/SQL/: Driver.vala  Engine.vala  Mysql.vala
src/Services/: Database.vala
src/Views/: DBConnect.vala  DBData.vala  DBDatabase.vala  HTTP.vala
src/Widgets/: Button.vala  Image.vala  MenuItem.vala  MysqlForm.vala  SourceView.vala  SqliteForm.vala  Tab.vala
src/backend/: sql_driver.vala  sql_engine.vala  sql_mysql.vala
src/config/: config.vala  connection.vala  environment.vala  http.vala  keyvalue.vala  plugin.vala
src/database/: condition.vala  connect.vala  data.vala  database.vala  mysql_form.vala  result_view.vala  sqlite_form.vala  table.vala  tables.vala
src/http/: addressbar.vala  collections_combobox.vala  const.vala  historypopover.vala  http.vala  http_store.vala  overlay.vala  plugin.vala  saveas.vala  sidebar.vala
src/importer/: importer.vala  insomnia.vala  postman.vala
src/services/: database.vala
src/widget/: button_opt.vala  keyvalues.vala  source_view.vala
src/widgets/: image.vala  keyvalues.vala
textarea/: textarea.go  textbuffer.go  textbuffer_test.go
tviewext/: nav.go  textarea.go  textbuffer.go  textbuffer_test.go
ui/: #connect.glade#  connect.glade  connect.glade~  main.glade~
ui/controls/: list.go  result.go
vapi/: libcurl.vapi
